Use block level element with styling for teaser.

--- a/packages/global/scss/components/_content-page.scss
+++ b/packages/global/scss/components/_content-page.scss
@@ -4,6 +4,11 @@
     margin-bottom: 1rem;
   }
 
+  &__content-teaser {
+    @include skin-typography($style: "article-text", $link-style: "content-body");
+    font-style: italic;
+  }
+
   &__section {
     &--content-page-body {
       max-width: $skin-content-body-max-width;
