--- a/packages/global/scss/components/_content-page.scss
+++ b/packages/global/scss/components/_content-page.scss
@@ -148,6 +148,7 @@
       }
       img {
         width: auto;
+        min-width: 100%;
         max-width: 100%;
         max-height: 300px;
       }
@@ -159,6 +160,7 @@
       }
       img {
         width: auto;
+        min-width: 100%;
         max-width: 100%;
         max-height: 300px;
       }
