--- a/packages/global/scss/core.scss
+++ b/packages/global/scss/core.scss
@@ -1,16 +1,5 @@
-// skin functions and vars (funcs must be first).
-@import "./functions";
-@import "./variables";
-
-@import "../../node_modules/@parameter1/base-cms-marko-web-theme-default/scss/theme";
-@import "../../node_modules/bootstrap/scss/spinners";
-
-@import "../../node_modules/@parameter1/base-cms-marko-web-social-sharing/scss/buttons";
-@import "../../node_modules/bootstrap/scss/input-group";
-@import "../../node_modules/@parameter1/base-cms-marko-web-html-sitemap/scss/index";
-
-// skin mixins
-@import "./mixins";
+// theme css
+@import "../../node_modules/@rogue-monkey-media/package-theme-monorail/scss/core";
 
 // skin components
 @import "./components/ads";
