Adjust font family defaults

--- a/packages/theme-monorail/scss/_variables.scss
+++ b/packages/theme-monorail/scss/_variables.scss
@@ -1,12 +1,8 @@
 // Fonts
 //
 // Skin primary + secondary fonts. By default, set secondary to primary.
-// $skin-font-family-primary: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, "Helvetica Neue", arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-// $skin-font-family-secondary: $skin-font-family-primary !default;
-
-@import url("https://use.typekit.net/eae7fel.css");
-$skin-font-family-primary: solitaire-mvb-pro, sans-serif;
-$skin-font-family-secondary: informapro, sans-serif;
+$skin-font-family-primary: Arial, sans-serif !default;
+$skin-font-family-secondary: Arial, sans-serif !default;
 
 // Set bootstrap font to primary skin font
 $font-family-sans-serif: $skin-font-family-primary;
