--- a/packages/global/components/nrwa-site-footer.marko
+++ b/packages/global/components/nrwa-site-footer.marko
@@ -81,7 +81,7 @@ $ const navBlockName = "site-footer-nav";
       />
 
       $ const footerItems = site.getAsArray("navigation.footer.items");
-      <default-theme-breadcrumbs modifiers=["site-footer"]>
+      <theme-breadcrumbs modifiers=["site-footer"]>
         <for|item| of=getNavItems({ items: footerItems, hasUser: input.hasUser, regEnabled: input.regEnabled })>
           <@item>
             $ const obj = asObject(item);
@@ -90,7 +90,7 @@ $ const navBlockName = "site-footer-nav";
             </marko-web-link>
           </@item>
         </for>
-      </default-theme-breadcrumbs>
+      </theme-breadcrumbs>
 
     </marko-web-element>
   </default-theme-site-footer-container>
