Move ads css to theme

--- a/packages/theme-monorail/scss/components/_ads.scss
+++ b/packages/theme-monorail/scss/components/_ads.scss
@@ -9,6 +9,15 @@
   $label-line-height: 1;
   $container-height: $container-bottom-padding + $wrapper-first-child-padding + ($label-font-size * $label-line-height) + $label-bottom-padding;
 
+  $leaderboard-min-height-mobile: 50px !default;
+  $leaderboard-min-height-desktop: 90px !default;
+  $billboard-min-height-mobile: 210px !default;
+  $billboard-min-height-desktop: 596px !default;
+  $rotation-min-height-mobile: 50px !default;
+  $rotation-min-height-desktop: 90px !default;
+
+  $rail-ad-bg-color: $skin-ad-bg-color !default;
+
   &--inter-block {
     margin-right: -#{$marko-web-page-wrapper-padding};
     margin-bottom: 0;
@@ -86,7 +95,7 @@
   }
 
   &--rail {
-    background-color: $skin-ad-bg-color;
+    background-color: $rail-ad-bg-color;
     > *:first-child {
       padding-bottom: $container-bottom-padding;
     }
@@ -96,7 +105,7 @@
   }
 
   &--rail-mobile {
-    background-color: $skin-ad-bg-color;
+    background-color: $rail-ad-bg-color;
     > *:first-child {
       padding-bottom: $container-bottom-padding;
     }
@@ -146,30 +155,37 @@
   }
 
   &--template-leaderboard {
-    min-height: 50px + $container-height;
+    min-height: $leaderboard-min-height-mobile + $container-height;
     @media (min-width: 780px) {
-      min-height: 90px + $container-height;
+      min-height: $leaderboard-min-height-desktop + $container-height;
+    }
+  }
+
+  &--template-billboard {
+    min-height: $billboard-min-height-mobile + $container-height;
+    @media (min-width: 780px) {
+      min-height: $billboard-min-height-desktop + $container-height;
     }
   }
 
   &--template-rotation,
   &--template-inline-content-desktop,
   &--template-inline-content-mobile {
-    min-height: 50px + $container-height;
+    min-height: $rotation-min-height-mobile + $container-height;
     @media (min-width: 780px) {
-      min-height: 90px + $container-height;
+      min-height: $rotation-min-height-desktop + $container-height;
     }
   }
 
   &--inline-content#{&}--template-inline-content-desktop {
     display: none;
-    @media (min-width: 750px) {
+    @media (min-width: 780px) {
       display: block;
     }
   }
 
   &--inline-content#{&}--template-inline-content-mobile {
-    @media (min-width: 750px) {
+    @media (min-width: 780px) {
       display: none;
     }
   }
@@ -191,12 +207,41 @@
       }
     }
   }
+}
 
-  // &--combined-leaderboard {
-  //   .ad-container {
-  //     &__wrapper {
-  //       padding-top: 0;
-  //     }
-  //   }
-  // }
+.wallpaper-ad {
+  $width: 300px;
+
+  position: fixed;
+  right: 0;
+  left: 0;
+
+  display: none;
+
+  @media (min-width: 1400px) {
+    display: block;
+  }
+
+  &__left,
+  &__right {
+    position: absolute;
+    top: 0;
+  }
+
+  &__left {
+    left: 0;
+  }
+  &__right {
+    right: 0;
+  }
+
+  @media (max-width: calc(#{$marko-web-document-container-max-width} + (#{$width} * 2))) {
+    $lr: calc((100vw - #{$marko-web-document-container-max-width} - (#{$width} * 2)) / 2);
+    &__left {
+      left: $lr;
+    }
+    &__right {
+      right: $lr;
+    }
+  }
 }
