Move component css to theme

--- a/packages/theme-monorail/scss/core.scss
+++ b/packages/theme-monorail/scss/core.scss
@@ -17,3 +17,10 @@
 // theme components
 @import "./components/ads";
 @import "./components/author-node";
+@import "./components/author-published-node";
+@import "./components/comments";
+@import "./components/pagination-controls";
+@import "./components/site-footer";
+@import "./components/search-page";
+@import "./components/spec-guide";
+@import "./components/sponsor-logo";
