--- a/packages/theme-monorail/scss/core.scss
+++ b/packages/theme-monorail/scss/core.scss
@@ -21,6 +21,7 @@
 @import "./components/comments";
 @import "./components/pagination-controls";
 @import "./components/site-footer";
+@import "./components/site-navbar";
 @import "./components/search-page";
 @import "./components/spec-guide";
 @import "./components/sponsor-logo";
