Move page-wrapper css to theme

--- a/packages/theme-monorail/scss/core.scss
+++ b/packages/theme-monorail/scss/core.scss
@@ -19,6 +19,7 @@
 @import "./components/author-node";
 @import "./components/author-published-node";
 @import "./components/comments";
+@import "./components/page-wrapper";
 @import "./components/pagination-controls";
 @import "./components/site-footer";
 @import "./components/site-navbar";
