--- a/packages/theme-monorail/scss/core.scss
+++ b/packages/theme-monorail/scss/core.scss
@@ -23,6 +23,7 @@
 @import "./components/page-wrapper";
 @import "./components/pagination-controls";
 @import "./components/site-footer";
+@import "./components/site-menu";
 @import "./components/site-navbar";
 @import "./components/search-page";
 @import "./components/spec-guide";
