--- a/packages/global/components/flows/content/directory-section.marko
+++ b/packages/global/components/flows/content/directory-section.marko
@@ -1,6 +1,6 @@
 import { getAsObject, get } from "@parameter1/base-cms-object-path";
 
-$ const { nodes, header, isYoutubeVideos } = input
+$ const { nodes, header } = input
 $ const image = getAsObject(input, "node.image");
 $ const content = getAsObject(input, "content");
 $ const blockName = "read-next";
@@ -20,19 +20,6 @@ $ const blockName = "read-next";
     >
       <@nodes nodes=nodes>
         <@slot|{ node }|>
-        <if(isYoutubeVideos)>
-          <div class="node-list__node">
-            <global-youtube-card-node
-              node=node
-              company-id=content.id
-              link-attrs={
-                "data-company-id": content.id,
-                "data-company-name": content.name,
-              }
-            />
-          </div>
-        </if>
-        <else>
           <global-content-node
             image-position="left"
             ...input.node
@@ -42,17 +29,8 @@ $ const blockName = "read-next";
           >
             <@image width=160 ar="3:2" ...image />
           </global-content-node>
-        </else>
         </@slot>
       </@nodes>
-      <if(isYoutubeVideos && content)>
-        <@footer>
-          $ const url = get(content, "youtube.url");
-          <a href=url target="_blank" rel="noopener" class="btn btn-sm btn-block btn-secondary">
-            View All Videos &gt;
-          </a>
-        </@footer>
-      </if>
     </marko-web-node-list>
   </marko-web-block>
 </if>
