--- a/packages/global/components/flows/content/card-deck-col.marko
+++ b/packages/global/components/flows/content/card-deck-col.marko
@@ -1,9 +1,11 @@
+import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 import { getAsObject } from "@parameter1/base-cms-object-path";
 
 $ const { nativeX: nxConfig } = out.global;
 $ const nativeX = getAsObject(input, "nativeX");
+$ const cols = defaultValue(input.cols, 4);
 
-<default-theme-card-deck-flow cols=4 nodes=input.nodes modifiers=input.modifiers>
+<default-theme-card-deck-flow cols=cols nodes=input.nodes modifiers=input.modifiers>
   <@slot|{ node, index }|>
     <if(nxConfig)>
       <marko-web-native-x-render|{ node: nxNode, linkAttrs, containerAttrs }|
