update minor css changes for this new block

--- a/packages/global/scss/components/blocks/_read-next.scss
+++ b/packages/global/scss/components/blocks/_read-next.scss
@@ -29,9 +29,24 @@
 }
 
 .read-next {
+  $self: &;
   margin-top: 30px;
   &__header {
     margin-bottom: 16px;
     @include skin-typography($style: "section-header-xs");
+  }
+  &--featured {
+    #{ $self } {
+      &__footer {
+        text-transform: uppercase;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        border-top: 1px solid $gray-200;
+      }
+    }
+    .node__image-wrapper+.node__body {
+      margin-left: 0;
+    }
   }
 }
