Move social-follow to theme

--- a/packages/global/components/nrwa-site-footer.marko
+++ b/packages/global/components/nrwa-site-footer.marko
@@ -67,7 +67,7 @@ $ const navBlockName = "site-footer-nav";
               has-user=false
             />
           </if>
-          <global-social-follow dark=false modifiers=["site-footer"] />
+          <theme-social-follow dark=false modifiers=["site-footer"] />
         </marko-web-element>
       </div>
     </marko-web-element>
