--- a/packages/global/components/blocks/section-feed.marko
+++ b/packages/global/components/blocks/section-feed.marko
@@ -16,9 +16,9 @@ $ const countOnly = defaultValue(input.countOnly, false);
 $ const lazyload = defaultValue(input.lazyload, true);
 
 <if(countOnly)>
-  <global-query-total-count|data| name=queryName params=queryParams>
+  <theme-query-total-count|data| name=queryName params=queryParams>
     <${input.renderBody} ...data />
-  </global-query-total-count>
+  </theme-query-total-count>
 </if>
 <else>
   <marko-web-query|{ nodes }| name=queryName params=queryParams>
