Move recaptcha to theme

--- a/packages/global/components/document.marko
+++ b/packages/global/components/document.marko
@@ -83,6 +83,6 @@ $ const {
   </@below-container>
   <@below-wrapper>
     <marko-web-deferred-script-loader-load />
-    <global-recaptcha />
+    <theme-recaptcha />
   </@below-wrapper>
 </marko-web-document>
