--- a/packages/global/components/layouts/content/company.marko
+++ b/packages/global/components/layouts/content/company.marko
@@ -68,7 +68,7 @@ $ const { $projectsGraphQL } = out.global;
           <@nodes|{ nodes }| nodes=videos block-name="read-next" modifiers=["featured"]>
             <default-theme-card-deck-flow cols=3 nodes=nodes modifiers=[]>
               <@slot|{ node, index }|>
-                <global-youtube-card-node
+                <theme-youtube-card-node
                   node=node
                   company-id=content.id
                   modifiers=["read-next"]
