--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -80,7 +80,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
 
         <if(shouldInjectAds && !isSponsored)>
 
-          <global-gam-inject-ads selector=`#${bodyId}` detect-embeds=true>
+          <theme-gam-inject-ads selector=`#${bodyId}` detect-embeds=true>
             $ const desktopCounts = [1000, 2750, 4500, 6250, 8000, 9750, 11500, 13250, 15000, 16750, 18500];
             <for|char| of=desktopCounts>
               <!-- desktop/tablet only -->
@@ -102,7 +102,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
                 modifiers=["max-width-970", "margin-auto-x", "inline-content"]
               />
             </for>
-          </global-gam-inject-ads>
+          </theme-gam-inject-ads>
         </if>
 
         <marko-web-content-body block-name=blockName obj=content attrs={ id: bodyId } />
