--- a/packages/theme-monorail/components/flows/content/card-deck-col.marko
+++ b/packages/theme-monorail/components/flows/content/card-deck-col.marko
@@ -4,6 +4,7 @@ import { getAsObject } from "@parameter1/base-cms-object-path";
 $ const { nativeX: nxConfig } = out.global;
 $ const nativeX = getAsObject(input, "nativeX");
 $ const cols = defaultValue(input.cols, 4);
+$ const nodeImageInput = getAsObject(input, "node.image");
 
 <default-theme-card-deck-flow cols=cols nodes=input.nodes modifiers=input.modifiers>
   <@slot|{ node, index }|>
@@ -26,7 +27,7 @@ $ const cols = defaultValue(input.cols, 4);
           link-attrs=linkAttrs
           attrs=containerAttrs
         >
-          <@image ar="3:2" fluid=true />
+          <@image ar="3:2" fluid=true ...nodeImageInput />
         </theme-content-node>
       </marko-web-native-x-render>
     </if>
@@ -41,7 +42,7 @@ $ const cols = defaultValue(input.cols, 4);
         ...input.node
         node=node
       >
-        <@image ar="3:2" fluid=true />
+        <@image ar="3:2" fluid=true ...nodeImageInput />
       </theme-content-node>
     </else>
   </@slot>
