Move page components to theme

--- a/packages/global/templates/digital-edition.marko
+++ b/packages/global/templates/digital-edition.marko
@@ -6,7 +6,7 @@ $ const type = "digital-edition";
 $ const title = "Digital Edition";
 $ const description = "Digital Edition";
 
-<global-default-page type=type title=title description=description>
+<theme-default-page type=type title=title description=description>
   <@head>
     <marko-web-gtm-default-context|{ context }| type=type>
       <marko-web-gtm-push data=context />
@@ -61,4 +61,4 @@ $ const description = "Digital Edition";
       </@section>
     </marko-web-page-wrapper>
   </@page>
-</global-default-page>
+</theme-default-page>
