--- a/packages/global/components/site-header.marko
+++ b/packages/global/components/site-header.marko
@@ -34,6 +34,8 @@ $ const navigation = {
         src=site.get("logos.navbar.src")
         srcset=site.getAsArray("logos.navbar.srcset").join(",")
       />
+      <br/>
+      Content Portal
     </default-theme-site-navbar-brand>
 
     <default-theme-site-navbar-items
