Use p tag over br tag.

--- a/packages/global/components/site-header.marko
+++ b/packages/global/components/site-header.marko
@@ -34,8 +34,7 @@ $ const navigation = {
         src=site.get("logos.navbar.src")
         srcset=site.getAsArray("logos.navbar.srcset").join(",")
       />
-      <br/>
-      Content Portal
+      <p>Content Portal</p>
     </default-theme-site-navbar-brand>
 
     <default-theme-site-navbar-items
