--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -141,3 +141,12 @@ $primary: #103a57;
   background-repeat: no-repeat;
   animation: movehorz3 64s linear infinite alternate;
 }
+
+.site-menu {
+  &__contents-desktop {
+    padding-top: 60px;
+  }
+  &__contents-mobile {
+    padding-top: 50px;
+  }
+}
