Disable footer leaderboards

--- a/packages/global/templates/directory/index.marko
+++ b/packages/global/templates/directory/index.marko
@@ -130,11 +130,11 @@ $ const currentPage = search.getCurrentPage();
       </div>
     </div>
   </@section>
-  <@section>
+  <!-- <@section>
     <theme-gam-define-display-ad
       name="rotation"
       position="static_page"
       modifiers=["inter-block"]
     />
-  </@section>
+  </@section> -->
 </global-website-section-default-layout>
