Inject ads within press releases

--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -15,7 +15,7 @@ $ const displaySocialShare = ["contact"].includes(type) ? false : true;
 $ const displayComments = ["contact"].includes(type) ? false : true;
 <!-- $ const displayNewsletterSignup = ["contact"].includes(type) ? false : true; -->
 $ const displayNewsletterSignup = false;
-$ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type);
+$ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release"].includes(type);
 
 <global-content-wrapper-layout
   id=id
