Fix directory leaderboard

--- a/packages/global/templates/directory/index.marko
+++ b/packages/global/templates/directory/index.marko
@@ -16,6 +16,7 @@ $ const currentPage = search.getCurrentPage();
 >
   <@section|{ aliases }| modifiers=["first"]>
     <theme-gam-define-display-ad
+      name="leaderboard"
       position="section_page"
       aliases=aliases
       modifiers=["inter-block"]
