Add top margin to company landing pages

--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -11,6 +11,11 @@ $primary: #103a57;
 
 @import "../../node_modules/@rogue-monkey-media/package-global/scss/core";
 
+.page {
+  &--content-company {
+    margin-top: 2rem;
+  }
+}
 
 .site-header {
   .site-navbar {
