Fix footer links by setting the wave to a lower z-index

--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -120,6 +120,7 @@ $primary: #103a57;
 .site-footer .wave-wrapper {
   position: absolute;
   top: -54px;
+  z-index: -1;
   width: 100%;
   height: calc(100% + 54px);
   overflow: hidden;
