--- a/packages/global/templates/directory/index.marko
+++ b/packages/global/templates/directory/index.marko
@@ -100,7 +100,12 @@ $ const currentPage = search.getCurrentPage();
                   >
                     <@nodes nodes=nodes>
                       <@slot|{ node }|>
-                        <theme-directory-section-feed-content-node node=node with-dates=false is-featured=true />
+                        <theme-directory-section-feed-content-node
+                          node=node
+                          with-dates=false
+                          request-quote=false
+                          is-featured=true
+                        />
                       </@slot>
                     </@nodes>
                   </marko-web-node-list>
@@ -117,7 +122,12 @@ $ const currentPage = search.getCurrentPage();
                 >
                   <@nodes nodes=nodes>
                     <@slot|{ node }|>
-                      <theme-directory-section-feed-content-node node=node with-teaser=false display-image=false with-dates=false />
+                      <theme-directory-section-feed-content-node
+                        node=node
+                        with-teaser=false
+                        display-image=false
+                        with-dates=false
+                      />
                     </@slot>
                   </@nodes>
                 </marko-web-node-list>
