Move search template to theme

--- a/packages/theme-monorail/templates/search.marko
+++ b/packages/theme-monorail/templates/search.marko
@@ -19,6 +19,7 @@ $ const currentPage = search.getCurrentPage();
     <marko-web-page-wrapper>
       <@section modifiers=["first"]>
         <theme-gam-define-display-ad
+          name="leaderboard"
           position="static_page"
           modifiers=["inter-block"]
         />
