--- a/packages/theme-monorail/components/blocks/section-feed.marko
+++ b/packages/theme-monorail/components/blocks/section-feed.marko
@@ -1,9 +1,8 @@
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 import queryFragment from "../../graphql/fragments/section-feed-block";
 
-
 $ const queryName = input.queryName ? input.queryName : "website-scheduled-content";
-$ const queryParams =  {
+$ const queryParams = {
   ...input.queryParams,
   ...(queryName === "website-scheduled-content") && {
     sectionAlias: input.alias,
@@ -13,7 +12,9 @@ $ const queryParams =  {
 
 $ const blockName = "section-feed";
 $ const countOnly = defaultValue(input.countOnly, false);
+$ const modifiers = defaultValue(input.modifiers, []);
 $ const lazyload = defaultValue(input.lazyload, true);
+$ const withSection = defaultValue(input.withSection, true);
 
 <if(countOnly)>
   <theme-query-total-count|data| name=queryName params=queryParams>
@@ -26,11 +27,16 @@ $ const lazyload = defaultValue(input.lazyload, true);
       inner-justified=true
       flush-x=true
       flush-y=false
-      modifiers=[blockName]
+      modifiers=[blockName, ...modifiers]
     >
       <@nodes nodes=nodes>
         <@slot|{ node }|>
-          <theme-section-feed-content-node node=node lazyload=lazyload />
+          <theme-section-feed-content-node
+            node=node
+            display-image=input.displayImage
+            with-section=withSection
+            lazyload=lazyload
+          />
         </@slot>
       </@nodes>
     </marko-web-node-list>
