--- a/packages/global/components/magazine/blocks/magazine-issue-cards.marko
+++ b/packages/global/components/magazine/blocks/magazine-issue-cards.marko
@@ -1,5 +1,5 @@
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
-import queryFragment from "../graphql/fragments/section-feed-block";
+import queryFragment from "@rogue-monkey-media/package-theme-monorail/graphql/fragments/section-feed-block";
 
 $ const queryParams = {
   ...input.queryParams,
