--- a/packages/global/templates/content/contact.marko
+++ b/packages/global/templates/content/contact.marko
@@ -1,5 +1,5 @@
 import { buildImgixUrl } from "@parameter1/base-cms-image";
-import queryFragment from "../../graphql/fragments/section-feed-block";
+import queryFragment from "@rogue-monkey-media/package-theme-monorail/graphql/fragments/section-feed-block";
 
 $ const { id, type, pageNode } = data;
 
