Use theme blocks

--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -69,7 +69,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
           $ let forceDisplay;
           $ if (type === "contact") forceDisplay = "left";
           $ if (type === "video") forceDisplay = "none";
-          <global-primary-image-block
+          <theme-primary-image-block
             obj=content.primaryImage
             force-display=forceDisplay;
           />
@@ -134,7 +134,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
         </if>
         <!-- remove this when reworking newsletter signup -->
         <if(displayNewsletterSignup)>
-          <global-newsletter-signup-banner-block />
+          <theme-newsletter-signup-banner-block />
         </if>
 
         <if(displaySocialShare)>
@@ -150,7 +150,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
         </if>
 
         <if(displayReadNext)>
-          <global-read-next-block
+          <theme-read-next-block
             content-id=id
             section-id=primarySection.id
             published=content.published
@@ -172,7 +172,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
   </if>
 
   <@section|{ content }|>
-    <global-related-stories-block
+    <theme-related-stories-block
       content-id=content.id
       section-id=content.primarySection.id
     />
