--- a/packages/global/components/layouts/content/product.marko
+++ b/packages/global/components/layouts/content/product.marko
@@ -84,7 +84,7 @@ $ const sections = getAsArray(input, "sections");
   </@section>
 
   <@section>
-    <global-top-stories-block />
+    <theme-top-stories-block />
   </@section>
 
   <for|s| of=sections>
