--- a/packages/global/components/layouts/website-section/home.marko
+++ b/packages/global/components/layouts/website-section/home.marko
@@ -21,7 +21,7 @@ $ const sections = getAsArray(input, "sections");
   </@section>
 
   <@section|{ aliases }|>
-    <global-top-stories-block with-header=false lazyload=false />
+    <theme-top-stories-block with-header=false lazyload=false />
   </@section>
 
   <for|s| of=sections>
