--- a/packages/global/templates/content/contact.marko
+++ b/packages/global/templates/content/contact.marko
@@ -90,7 +90,7 @@ $ const perPage = 10;
   </@section>
 
   <@section>
-    <global-top-stories-block />
+    <theme-top-stories-block />
   </@section>
 
   <@section|{ aliases }|>
