--- a/sites/content.nrwa.org/server/templates/content/media-gallery.marko
+++ b/sites/content.nrwa.org/server/templates/content/media-gallery.marko
@@ -7,7 +7,7 @@ $ const { id, type, pageNode, ...rest } = input;
   ...rest
 >
   <@section>
-     <global-top-stories-block />
+     <theme-top-stories-block />
   </@section>
 
   <@section>
