Add native-x support to related stories block and enable

--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -175,6 +175,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
     <theme-related-stories-block
       content-id=content.id
       section-id=content.primarySection.id
+      with-native-x=true
     />
   </@section>
 
