--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -1,5 +1,6 @@
 import { get, getAsArray } from "@parameter1/base-cms-object-path";
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
+import getContentPreview from "@rogue-monkey-media/package-theme-monorail/utils/get-content-preview";
 
 $ const { site } = out.global;
 $ const { id, type, pageNode, ...rest } = input;
@@ -75,49 +76,73 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
           />
         </else-if>
 
-        $ const isSponsored = getAsArray(content, "labels").includes("Sponsored");
-        $ const bodyId = `content-body-${content.id}`;
+        $ const requiresRegistration = get(content, "userRegistration.isCurrentlyRequired");
+        $ const accessLevels = getAsArray(content, "userRegistration.accessLevels");
+        <marko-web-identity-x-access|context|
+          enabled=requiresRegistration
+          required-access-level-ids=accessLevels
+        >
+          <if(!context.canAccess || context.requiresUserInput)>
+            $ const body = getContentPreview({ body: content.body, selector: "p:nth-of-type(1)" });
+            <marko-web-content-body block-name=blockName obj={ body } />
 
-        <if(shouldInjectAds && !isSponsored)>
+            <div class="content-page-preview-overlay" />
+            <theme-content-page-gate
+              can-access=context.canAccess
+              is-logged-in=context.isLoggedIn
+              has-required-access-level=context.hasRequiredAccessLevel
+              requires-access-level=context.requiresAccessLevel
+              requires-user-input=context.requiresUserInput
+              messages=context.messages
+            />
+          </if>
+          <else>
 
-          <theme-gam-inject-ads selector=`#${bodyId}` detect-embeds=true>
-            $ const desktopCounts = [1000, 2750, 4500, 6250, 8000, 9750, 11500, 13250, 15000, 16750, 18500];
-            <for|char| of=desktopCounts>
-              <!-- desktop/tablet only -->
-              <@inject
-                at=char
-                name="inline-content-desktop"
+            $ const isSponsored = getAsArray(content, "labels").includes("Sponsored");
+            $ const bodyId = `content-body-${content.id}`;
+
+            <if(shouldInjectAds && !isSponsored)>
+
+              <theme-gam-inject-ads selector=`#${bodyId}` detect-embeds=true>
+                $ const desktopCounts = [1000, 2750, 4500, 6250, 8000, 9750, 11500, 13250, 15000, 16750, 18500];
+                <for|char| of=desktopCounts>
+                  <!-- desktop/tablet only -->
+                  <@inject
+                    at=char
+                    name="inline-content-desktop"
+                    aliases=aliases
+                    modifiers=["max-width-970", "margin-auto-x", "inline-content"]
+                  />
+                </for>
+
+                $ const mobileCounts = [350, 1650, 2950, 4250, 5550, 6850, 8150, 9450, 10750, 12050, 13350, 14650, 15950, 17250];
+                <for|char| of=mobileCounts>
+                  <!-- mobile only -->
+                  <@inject
+                    at=char
+                    name="inline-content-mobile"
+                    aliases=aliases
+                    modifiers=["max-width-970", "margin-auto-x", "inline-content"]
+                  />
+                </for>
+              </theme-gam-inject-ads>
+            </if>
+
+            <marko-web-content-body block-name=blockName obj=content attrs={ id: bodyId } />
+
+            <!-- needs input -->
+            <if(input.afterBody)>
+              <${input.afterBody}
                 aliases=aliases
-                modifiers=["max-width-970", "margin-auto-x", "inline-content"]
+                block-name=blockName
+                content=content
               />
-            </for>
+            </if>
 
-            $ const mobileCounts = [350, 1650, 2950, 4250, 5550, 6850, 8150, 9450, 10750, 12050, 13350, 14650, 15950, 17250];
-            <for|char| of=mobileCounts>
-              <!-- mobile only -->
-              <@inject
-                at=char
-                name="inline-content-mobile"
-                aliases=aliases
-                modifiers=["max-width-970", "margin-auto-x", "inline-content"]
-              />
-            </for>
-          </theme-gam-inject-ads>
-        </if>
-
-        <marko-web-content-body block-name=blockName obj=content attrs={ id: bodyId } />
-
-        <!-- needs input -->
-        <if(input.afterBody)>
-          <${input.afterBody}
-            aliases=aliases
-            block-name=blockName
-            content=content
-          />
-        </if>
-
-        $ const sidebars = getAsArray(content, "sidebars").map((sidebar) => sidebar.body);
-        <marko-web-content-sidebars block-name=blockName obj={ sidebars } />
+            $ const sidebars = getAsArray(content, "sidebars").map((sidebar) => sidebar.body);
+            <marko-web-content-sidebars block-name=blockName obj={ sidebars } />
+          </else>
+        </marko-web-identity-x-access>
 
         <if(type === "document" || type === "whitepaper")>
           <default-theme-content-download obj=content>
