Use double quotes on strings in _variables.scss.

--- a/packages/global/scss/_variables.scss
+++ b/packages/global/scss/_variables.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Open+Sans:wght@300;400;700&display=swap');
-$skin-font-family-primary: 'Alata', sans-serif;
-$skin-font-family-secondary: 'Open Sans', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Open+Sans:wght@300;400;700&display=swap");
+$skin-font-family-primary: "Alata", sans-serif;
+$skin-font-family-secondary: "Open Sans", sans-serif;
 
 $navbarStyle: "navbar" !default;
 $theme-site-navbar-logo-height: 45px;
